--- a/style.css
+++ b/style.css
@@ -169,6 +169,27 @@ footer a {
     background-color: #407fc7;
   }
 
+  .contact-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  #map-container,
+  #contact-info {
+    flex-basis: 48%; /* Ancho de cada sección */
+    box-sizing: border-box;
+    padding: 20px;
+    border: 1px solid #ccc; /* Añade un borde gris */
+    border-radius: 8px; /* Añade bordes redondeados */
+    margin: 10px; /* Añade un margen para separar las secciones */
+  }
+  
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+
 #check {
     display: none;
     
